force-app/main/default/objects/Case/fields/Account_Currency__c.field-meta.xml
<CustomField>
    <fullName>Account_Currency__c</fullName>
    <formula>text( Account.CurrencyIsoCode )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Currency</label>
    <type>Text</type>
</CustomField>