force-app/main/default/objects/Case/fields/Account_Field_Changed__c.field-meta.xml
<CustomField>
    <fullName>Account_Field_Changed__c</fullName>
    <label>Account Field Changed</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Business_Type__c</fullName>
                <label>Business Type</label>
            </value>
            <value>
                <fullName>CS_EPA_ID__c</fullName>
                <label>EPA ID</label>
            </value>
            <value>
                <fullName>State_EPA_ID__c</fullName>
                <label>State EPA ID</label>
            </value>
            <value>
                <fullName>GENREG__c</fullName>
                <label>GenReg Id</label>
            </value>
            <value>
                <fullName>Industry_Segment__c</fullName>
                <label>Vertical</label>
            </value>
            <value>
                <fullName>Class__c</fullName>
                <label>Class</label>
            </value>
            <value>
                <fullName>Chain__c</fullName>
                <label>Chain Code Name</label>
            </value>
            <value>
                <fullName>Name</fullName>
                <label>Account Name</label>
            </value>
            <value>
                <fullName>Sic</fullName>
                <label>SIC Code</label>
            </value>
            <value>
                <fullName>Shipping Address</fullName>
            </value>
            <value>
                <fullName>Billing Address</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>