force-app/main/default/objects/Case/fields/Account_Lost_Reason__c.field-meta.xml
<CustomField>
    <fullName>Account_Lost_Reason__c</fullName>
    <formula>text( Account.Lost_Reason__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Account Lost Reason</label>
    <type>Text</type>
</CustomField>