force-app/main/default/objects/Case/fields/Account_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Account_Owner_Name__c</fullName>
    <description>Owner of account associated with Case</description>
    <formula>If(
RecordType.Name = &quot;Field Change Request&quot;,

Parent.Account.Account_Owner_Name__c,

Account.Account_Owner_Name__c)</formula>
    <inlineHelpText>Owner of account associated with Case</inlineHelpText>
    <label>Account Owner Name</label>
    <type>Text</type>
</CustomField>