force-app/main/default/objects/Case/fields/Account_Win_Id__c.field-meta.xml
<CustomField>
    <fullName>Account_Win_Id__c</fullName>
    <description>This field shows the win id of Parent case&apos;s related Account.</description>
    <formula>Parent.Account.WIN_ID__c</formula>
    <label>Win Id</label>
    <type>Text</type>
</CustomField>