force-app/main/default/objects/Case/fields/Address_Line_1__c.field-meta.xml
<CustomField>
    <fullName>Address_Line_1__c</fullName>
    <description>This field is used to store the Billing Address Line 1 while converting ShipTo/Gen to Customer account</description>
    <label>Address Line 1</label>
    <length>60</length>
    <type>Text</type>
</CustomField>