force-app/main/default/objects/Case/fields/Approve_with_Corrections__c.field-meta.xml
<CustomField>
    <fullName>Approve_with_Corrections__c</fullName>
    <defaultValue>false</defaultValue>
    <description>CMD group checks this box when they need to approve the case with minor corrections on account.</description>
    <label>Approve with Corrections</label>
    <type>Checkbox</type>
</CustomField>