force-app/main/default/objects/Case/fields/AQMD_Application_No__c.field-meta.xml
<CustomField>
    <fullName>AQMD_Application_No__c</fullName>
    <formula>if( text(Status) = &apos;Approved&apos;,  AQMD_Application_Number__c , &quot;N/A&quot;)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>AQMD Application No.</label>
    <type>Text</type>
</CustomField>