force-app/main/default/objects/Case/fields/AQMD_Application_Number__c.field-meta.xml
<CustomField>
    <fullName>AQMD_Application_Number__c</fullName>
    <displayFormat>{00000000}</displayFormat>
    <label>AQMD Application Number</label>
    <type>AutoNumber</type>
</CustomField>