force-app/main/default/objects/Case/fields/Aurora_Territory_Flag__c.field-meta.xml
<CustomField>
    <fullName>Aurora_Territory_Flag__c</fullName>
    <formula>not (isblank(  Account.Territory_ID_SK__c ))</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Aurora Territory Flag</label>
    <type>Checkbox</type>
</CustomField>