force-app/main/default/objects/Case/fields/Aurora_Territory_ID__c.field-meta.xml
<CustomField>
    <fullName>Aurora_Territory_ID__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Aurora Territory ID</label>
    <referenceTo>Territory__c</referenceTo>
    <relationshipLabel>Cases (Aurura Territory ID)</relationshipLabel>
    <relationshipName>Cases1</relationshipName>
    <type>Lookup</type>
</CustomField>