force-app/main/default/objects/Case/fields/Aurora_Territory_Owner_Name__c.field-meta.xml
<CustomField>
    <fullName>Aurora_Territory_Owner_Name__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Aurura Territory Owner Name</description>
    <label>Aurora Territory Owner Name</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases10</relationshipName>
    <type>Lookup</type>
</CustomField>