force-app/main/default/objects/Case/fields/Authorization_Code__c.field-meta.xml
<CustomField>
    <fullName>Authorization_Code__c</fullName>
    <description>Formula populates with Salesforce 15-digt ID of Case</description>
    <formula>Id</formula>
    <inlineHelpText>An automated code to tie services orders back to cases and accounts.</inlineHelpText>
    <label>Authorization Code</label>
    <type>Text</type>
</CustomField>