force-app/main/default/objects/Case/fields/BR_Resolution__c.field-meta.xml
<CustomField>
    <fullName>BR_Resolution__c</fullName>
    <label>BR Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Call_Reason__c</controllingField>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Save</fullName>
            </value>
            <value>
                <fullName>loss</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>