force-app/main/default/objects/Case/fields/Branch_Account__c.field-meta.xml
<CustomField>
    <fullName>Branch_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch Account related to the case</description>
    <label>Branch</label>
    <lookupFilter>
        <active>true</active>
        <booleanFilter>(1 AND 2 AND 3) OR (1 AND 4)</booleanFilter>
        <errorMessage>Branch may not be flagged for Service Cases.</errorMessage>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <filterItems>
            <field>Account.Branch_Call_Origin_Flag__c</field>
            <operation>equals</operation>
            <value>True</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>notEqual</operation>
            <value>Parts Washer Pull Request</value>
        </filterItems>
        <filterItems>
            <field>$Source.RecordTypeId</field>
            <operation>equals</operation>
            <value>Parts Washer Pull Request</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases</relationshipLabel>
    <relationshipName>Cases</relationshipName>
    <type>Lookup</type>
</CustomField>