force-app/main/default/objects/Case/fields/Branch_Account_NSB__c.field-meta.xml
<CustomField>
    <fullName>Branch_Account_NSB__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Branch Account of the Case</description>
    <label>Branch Account</label>
    <lookupFilter>
        <active>true</active>
        <filterItems>
            <field>Account.RecordTypeId</field>
            <operation>equals</operation>
            <value>Branch</value>
        </filterItems>
        <isOptional>false</isOptional>
    </lookupFilter>
    <referenceTo>Account</referenceTo>
    <relationshipLabel>Cases (Branch Account)</relationshipLabel>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>