force-app/main/default/objects/Case/fields/Branch_Resolution__c.field-meta.xml
<CustomField>
    <fullName>Branch_Resolution__c</fullName>
    <inlineHelpText>Branch must select one option prior to closing the case.</inlineHelpText>
    <label>Branch Resolution</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Saved</fullName>
            </value>
            <value>
                <fullName>Lost</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>