force-app/main/default/objects/Case/fields/Call_Center_Activity_ID__c.field-meta.xml
<CustomField>
    <fullName>Call_Center_Activity_ID__c</fullName>
    <label>Call Center Activity ID</label>
    <length>18</length>
    <type>Text</type>
</CustomField>