force-app/main/default/objects/Case/fields/Call_Origin__c.field-meta.xml
<CustomField>
    <fullName>Call_Origin__c</fullName>
    <description>Visible on phone by 800 number</description>
    <inlineHelpText>Visible on phone by 800 number</inlineHelpText>
    <label>Call Origin</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Amarillo</fullName>
                <isActive>false</isActive>
                <label>Amarillo</label>
            </value>
            <value>
                <fullName>Auburn</fullName>
                <isActive>false</isActive>
                <label>Auburn</label>
            </value>
            <value>
                <fullName>Avon</fullName>
                <isActive>false</isActive>
                <label>Avon</label>
            </value>
            <value>
                <fullName>Baltimore</fullName>
                <isActive>false</isActive>
                <label>Baltimore</label>
            </value>
            <value>
                <fullName>Barre</fullName>
                <isActive>false</isActive>
                <label>Barre</label>
            </value>
            <value>
                <fullName>Baton Rouge</fullName>
                <isActive>false</isActive>
                <label>Baton Rouge</label>
            </value>
            <value>
                <fullName>Bismarck</fullName>
                <isActive>false</isActive>
                <label>Bismarck</label>
            </value>
            <value>
                <fullName>Blaine</fullName>
                <isActive>false</isActive>
                <label>Blaine</label>
            </value>
            <value>
                <fullName>Boynton Beach</fullName>
                <isActive>false</isActive>
                <label>Boynton Beach</label>
            </value>
            <value>
                <fullName>Branch</fullName>
            </value>
            <value>
                <fullName>Cape Girardeau</fullName>
                <isActive>false</isActive>
                <label>Cape Girardeau</label>
            </value>
            <value>
                <fullName>Champaign</fullName>
                <isActive>false</isActive>
                <label>Champaign</label>
            </value>
            <value>
                <fullName>Chandler</fullName>
                <isActive>false</isActive>
                <label>Chandler</label>
            </value>
            <value>
                <fullName>Chat</fullName>
            </value>
            <value>
                <fullName>Chat Email</fullName>
            </value>
            <value>
                <fullName>Chattanooga</fullName>
                <isActive>false</isActive>
                <label>Chattanooga</label>
            </value>
            <value>
                <fullName>Clackamas</fullName>
                <isActive>false</isActive>
                <label>Clackamas</label>
            </value>
            <value>
                <fullName>Closed Branch</fullName>
                <isActive>false</isActive>
                <label>Closed Branch</label>
            </value>
            <value>
                <fullName>Cohoes</fullName>
                <isActive>false</isActive>
                <label>Cohoes</label>
            </value>
            <value>
                <fullName>Columbia</fullName>
                <isActive>false</isActive>
                <label>Columbia</label>
            </value>
            <value>
                <fullName>Corpus Christi</fullName>
                <isActive>false</isActive>
                <label>Corpus Christi</label>
            </value>
            <value>
                <fullName>Customer Portal</fullName>
            </value>
            <value>
                <fullName>Davenport</fullName>
                <isActive>false</isActive>
                <label>Davenport</label>
            </value>
            <value>
                <fullName>Des Moines</fullName>
                <isActive>false</isActive>
                <label>Des Moines</label>
            </value>
            <value>
                <fullName>DIY Line</fullName>
            </value>
            <value>
                <fullName>Dolomite</fullName>
                <isActive>false</isActive>
                <label>Dolomite</label>
            </value>
            <value>
                <fullName>Dolton</fullName>
                <isActive>false</isActive>
                <label>Dolton</label>
            </value>
            <value>
                <fullName>Eagan</fullName>
                <isActive>false</isActive>
                <label>Eagan</label>
            </value>
            <value>
                <fullName>Ecommerce</fullName>
            </value>
            <value>
                <fullName>Ecommerce Chat</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>