force-app/main/default/objects/Case/fields/Call_Reason__c.field-meta.xml
<CustomField>
    <fullName>Call_Reason__c</fullName>
    <label>Call Reason</label>
    <type>Picklist</type>
    <valueSet>
        <controllingField>Type_of_Call__c</controllingField>
        <valueSetDefinition>
            <sorted>true</sorted>
            <value>
                <fullName>Account Balance Request</fullName>
            </value>
            <value>
                <fullName>Customer - Address Change</fullName>
                <label>Address Change</label>
            </value>
            <value>
                <fullName>AR</fullName>
            </value>
            <value>
                <fullName>Auto-Recording</fullName>
            </value>
            <value>
                <fullName>Better Competitor Price</fullName>
            </value>
            <value>
                <fullName>Branch Personnel Transfer</fullName>
            </value>
            <value>
                <fullName>Call Disconnected</fullName>
            </value>
            <value>
                <fullName>Change Address</fullName>
            </value>
            <value>
                <fullName>Change in Owner</fullName>
            </value>
            <value>
                <fullName>Change In Ownership</fullName>
            </value>
            <value>
                <fullName>COI</fullName>
            </value>
            <value>
                <fullName>Contract Copy</fullName>
            </value>
            <value>
                <fullName>Credit / Invoice Issue</fullName>
            </value>
            <value>
                <fullName>Credit Hold</fullName>
            </value>
            <value>
                <fullName>Customer Cost Reduction</fullName>
            </value>
            <value>
                <fullName>Delinquent Account</fullName>
            </value>
            <value>
                <fullName>Document Unavailable</fullName>
            </value>
            <value>
                <fullName>Driver Complaint</fullName>
            </value>
            <value>
                <fullName>Ecommerce Account Issue</fullName>
            </value>
            <value>
                <fullName>Emerald Cedar Grove</fullName>
            </value>
            <value>
                <fullName>Employment Verification</fullName>
            </value>
            <value>
                <fullName>EPA ID</fullName>
            </value>
            <value>
                <fullName>Equipment</fullName>
            </value>
            <value>
                <fullName>Equipment Repair</fullName>
            </value>
            <value>
                <fullName>ER</fullName>
            </value>
            <value>
                <fullName>Existing Customer</fullName>
            </value>
            <value>
                <fullName>Existing Service</fullName>
            </value>
            <value>
                <fullName>Existing Service - ETA</fullName>
            </value>
            <value>
                <fullName>Existing Service - UMO</fullName>
            </value>
            <value>
                <fullName>Fee</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>