force-app/main/default/objects/Case/fields/Caller_s_First_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_s_First_Name__c</fullName>
    <description>First Name of Caller to Call Center Agent</description>
    <inlineHelpText>First Name of Caller to Call Center Agent</inlineHelpText>
    <label>First Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>