force-app/main/default/objects/Case/fields/Caller_s_Last_Name__c.field-meta.xml
<CustomField>
    <fullName>Caller_s_Last_Name__c</fullName>
    <description>Last Name of the caller to the Call Center Agent</description>
    <inlineHelpText>Last Name of the caller to the Call Center Agent</inlineHelpText>
    <label>Last Name</label>
    <length>50</length>
    <type>Text</type>
</CustomField>