force-app/main/default/objects/Case/fields/Caller_s_Phone_Number__c.field-meta.xml
<CustomField>
    <fullName>Caller_s_Phone_Number__c</fullName>
    <description>Phone Number of caller to Call Center Agent</description>
    <inlineHelpText>Phone Number of caller to Call Center Agent</inlineHelpText>
    <label>Caller&apos;s Phone Number</label>
    <type>Phone</type>
</CustomField>