force-app/main/default/objects/Case/fields/Care_Center_Manager_Reviewed__c.field-meta.xml
<CustomField>
    <fullName>Care_Center_Manager_Reviewed__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Care Center Manager Reviewed</label>
    <type>Checkbox</type>
</CustomField>