force-app/main/default/objects/Case/fields/Case_Number_Hyperlink__c.field-meta.xml
<CustomField>
    <fullName>Case_Number_Hyperlink__c</fullName>
    <formula>HYPERLINK(&quot;/&quot; &amp; CASESAFEID(Id),  CaseNumber, &quot;_self&quot;)</formula>
    <label>Case Number Hyperlink</label>
    <type>Text</type>
</CustomField>