force-app/main/default/objects/Case/fields/Case_Owner_Approver__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases12</relationshipName>
    <type>Lookup</type>
</CustomField>