force-app/main/default/objects/Case/fields/Case_Owner_Manager__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_Manager__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner Manager</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases4</relationshipName>
    <type>Lookup</type>
</CustomField>