force-app/main/default/objects/Case/fields/Case_Owner_User__c.field-meta.xml
<CustomField>
    <fullName>Case_Owner_User__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Case Owner User</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CasesePUU</relationshipName>
    <type>Lookup</type>
</CustomField>