force-app/main/default/objects/Case/fields/Case_Rank__c.field-meta.xml
<CustomField>
    <fullName>Case_Rank__c</fullName>
    <description>Case Rank for Inside Sales account ranking purpose</description>
    <label>Case Rank</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>