force-app/main/default/objects/Case/fields/Case_Submitted_by__c.field-meta.xml
<CustomField>
    <fullName>Case_Submitted_by__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Person that submitted case to Sales Ops Queue</description>
    <label>Case Submitted by</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases16</relationshipName>
    <type>Lookup</type>
</CustomField>