force-app/main/default/objects/Case/fields/Chat_Subject__c.field-meta.xml
<CustomField>
    <fullName>Chat_Subject__c</fullName>
    <label>Chat Subject</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Product/Pricing</fullName>
            </value>
            <value>
                <fullName>Service/Delivery</fullName>
            </value>
            <value>
                <fullName>Technical Issues</fullName>
            </value>
            <value>
                <fullName>Document Request</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>