force-app/main/default/objects/Case/fields/City__c.field-meta.xml
<CustomField>
    <fullName>City__c</fullName>
    <description>This field is used to store the Billing city while converting ShipTo/Gen to Customer account</description>
    <label>City</label>
    <length>30</length>
    <type>Text</type>
</CustomField>