force-app/main/default/objects/Case/fields/Contact_Email__c.field-meta.xml
<CustomField>
    <fullName>Contact_Email__c</fullName>
    <description>It displays the email of associated Contact</description>
    <formula>Main_Customer_Contact__r.Email</formula>
    <label>Contact Email</label>
    <type>Text</type>
</CustomField>