force-app/main/default/objects/Case/fields/Conver_DateTime__c.field-meta.xml
<CustomField>
    <fullName>Conver_DateTime__c</fullName>
    <label>Conver DateTime</label>
    <type>DateTime</type>
</CustomField>