force-app/main/default/objects/Case/fields/CONVER_DT__c.field-meta.xml
<CustomField>
    <fullName>CONVER_DT__c</fullName>
    <label>Conversation Date</label>
    <type>Date</type>
</CustomField>