force-app/main/default/objects/Case/fields/Corp_Key_Account__c.field-meta.xml
<CustomField>
    <fullName>Corp_Key_Account__c</fullName>
    <formula>Account.Key_Account_Name__c</formula>
    <label>Corp/Key Account</label>
    <type>Text</type>
</CustomField>