force-app/main/default/objects/Case/fields/Country__c.field-meta.xml
<CustomField>
    <fullName>Country__c</fullName>
    <description>This field is used to store the Billing Country while converting ShipTo/Gen to Customer account</description>
    <label>Country</label>
    <length>30</length>
    <type>Text</type>
</CustomField>