force-app/main/default/objects/Case/fields/CPG_Owner__c.field-meta.xml
<CustomField>
    <fullName>CPG_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field shows the owner of CPG.</description>
    <label>CPG Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>CPGOwner</relationshipName>
    <type>Lookup</type>
</CustomField>