force-app/main/default/objects/Case/fields/Cross_Sell_Opportunity_Business_Segment__c.field-meta.xml
<CustomField>
    <fullName>Cross_Sell_Opportunity_Business_Segment__c</fullName>
    <label>Cross Sell Opportunity Business Segment</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Daylighting</fullName>
            </value>
            <value>
                <fullName>Field Service</fullName>
            </value>
            <value>
                <fullName>Industrial Service</fullName>
            </value>
            <value>
                <fullName>Oil &amp; Gas</fullName>
            </value>
            <value>
                <fullName>Technical Service</fullName>
            </value>
            <value>
                <fullName>CP Harbor Quote</fullName>
            </value>
            <value>
                <fullName>FS Harbor Quote</fullName>
            </value>
            <value>
                <fullName>Cannot Quote</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>