force-app/main/default/objects/Case/fields/Current_Account_Owner__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Owner__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Existing Owner</description>
    <label>Current Account Owner</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases5</relationshipName>
    <type>Lookup</type>
</CustomField>