force-app/main/default/objects/Case/fields/Current_Account_Owner_formula__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Owner_formula__c</fullName>
    <formula>Account.Account_Owner_Name__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Account Owner</label>
    <type>Text</type>
</CustomField>