force-app/main/default/objects/Case/fields/Current_Account_Win_ID__c.field-meta.xml
<CustomField>
    <fullName>Current_Account_Win_ID__c</fullName>
    <formula>Account.WIN_ID__c</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Account Win ID</label>
    <type>Text</type>
</CustomField>