force-app/main/default/objects/Case/fields/Current_Owner_Case_Approver__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Case_Approver__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Current Owner Case Approver</label>
    <referenceTo>User</referenceTo>
    <relationshipName>Cases7</relationshipName>
    <type>Lookup</type>
</CustomField>