force-app/main/default/objects/Case/fields/Current_Owner_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Current_Owner_Primary_Business__c</fullName>
    <label>Current Owner Primary Business</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetName>Primary_Business</valueSetName>
    </valueSet>
</CustomField>