force-app/main/default/objects/Case/fields/Current_Primary_Business__c.field-meta.xml
<CustomField>
    <fullName>Current_Primary_Business__c</fullName>
    <formula>text( Account.Primary_Business__c )</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Current Primary Business</label>
    <type>Text</type>
</CustomField>