force-app/main/default/objects/Case/fields/CurrentSpendAmount__c.field-meta.xml
<CustomField>
    <fullName>CurrentSpendAmount__c</fullName>
    <label>Current Spend Amount</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>