force-app/main/default/objects/Case/fields/Cust_PO_Master_ID__c.field-meta.xml
<CustomField>
    <fullName>Cust_PO_Master_ID__c</fullName>
    <label>Customer PO Master ID</label>
    <length>20</length>
    <type>Text</type>
</CustomField>