force-app/main/default/objects/Case/fields/Custom_Link_to_Account_Profile_Page1__c.field-meta.xml
<CustomField>
    <fullName>Custom_Link_to_Account_Profile_Page1__c</fullName>
    <description>Live Link to the WIN Screen.</description>
    <formula>IF(
    CONTAINS($Api.Partner_Server_URL_390, &quot;chdev&quot;),
    HYPERLINK(&apos;https://winwebdev.cleanharbors.com/webprofile/defaultwebprofile.aspx&apos;, &apos;Custom Link to Account Profile Page&apos;, &apos;_blank&apos;),
    IF(
        CONTAINS($Api.Partner_Server_URL_390, &quot;chfull&quot;),
        HYPERLINK(&apos;https://winwebtest.cleanharbors.com/webprofile/defaultwebprofile.aspx&apos;, &apos;Custom Link to Account Profile Page&apos;, &apos;_blank&apos;),
        HYPERLINK(&apos;https://winweb.cleanharbors.com/webprofile/defaultwebprofile.aspx&apos;, &apos;Custom Link to Account Profile Page&apos;, &apos;_blank&apos;)
    )
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Custom Link to Account Profile Page</label>
    <type>Text</type>
</CustomField>