force-app/main/default/objects/Case/fields/Customer_Account_Status__c.field-meta.xml
<CustomField>
    <fullName>Customer_Account_Status__c</fullName>
    <formula>IF(
 or(text(Account.Type) = &apos;ShipTo/Gen&apos;, text(Account.Type) = &apos;Brok/Gen&apos;, text(Account.Type) = &apos;Dist/Gen&apos;), text(Account.Parent.Status__c), text(Account.Status__c)
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <label>Customer Account Status</label>
    <type>Text</type>
</CustomField>