force-app/main/default/objects/Case/fields/Customer_Balance__c.field-meta.xml
<CustomField>
    <fullName>Customer_Balance__c</fullName>
    <label>Customer Balance</label>
    <length>25</length>
    <type>Text</type>
</CustomField>